[package]
name = "create-systemd-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.2.1"
serde_ini = "0.2.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
derive_builder = "0.11.2"
